5.ingress/1.default/3.service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: delivery
spec:
  type: ClusterIP
  selector:
    app: front-app
  ports:
  - port: 10000
    targetPort: 80
